--- a/LinearRegression/Linear_Regression.ipynb
+++ b/LinearRegression/Linear_Regression.ipynb
@@ -260,7 +260,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Linear Regression (Part-1)"
+        "## Linear Regression"
       ],
       "metadata": {
         "id": "f8iKr9GN-BqT"
