--- a/LinearRegression/Linear_Regression.ipynb
+++ b/LinearRegression/Linear_Regression.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pickleFile = open(\"hw1_p2.pkl\",\"rb\")\n",
+        "pickleFile = open(\"data.pkl\",\"rb\")\n",
         "obj = pd.read_pickle(pickleFile)\n",
         "#obj"
       ],
